[build-system]
requires = [
    "setuptools >= 82.0.1",
    "setuptools-scm"
]
build-backend = "setuptools.build_meta"

[project]
name = "PythonESE"
description = "PythonESE is a Python web app to execute logic programs with different solvers, using the EmbASP framework."
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
authors = [
    {name = "Stefano Germano", email = "loide@mat.unical.it"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "embasp-python>=8",
    "tornado>=6.5.5"
]
keywords = ["logic programming", "ASP", "Datalog"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/DeMaCS-UNICAL/PythonESE"
Repository = "https://github.com/DeMaCS-UNICAL/PythonESE"
Issues = "https://github.com/DeMaCS-UNICAL/PythonESE/issues"

[tool.setuptools]
packages = ["embasp_server_executor"]

[project.scripts]
ese-run = 'embasp_server_executor.ese_main:main'

[tool.setuptools_scm]
